# FCPX_Sync

./: .gitignore  README.md  build_mac.sh  demo.html  make_icon.py  pyproject.toml  synced.fcpxml
fcpx_sync/: __init__.py  app.py  audio_sync.py  cli.py  fcpxml.py  gui.py  sync_engine.py  webview_app.py
fcpx_sync/ui/: index.html
synced.fcpxmld/: Info.fcpxml
tests/: test_audio_sync.py  test_fcpxml.py  test_sync.py
