[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fcpx-sync"
version = "0.2.0"
description = "Batch audio/video sync tool for Final Cut Pro X using timecode"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Jordan Oliver"},
]
# No Python dependencies! Only requires ffmpeg on PATH.
dependencies = []

[project.scripts]
fcpx-sync = "fcpx_sync.cli:main"
fcpx-sync-gui = "fcpx_sync.gui:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]
